--- a/01-React/03-React/HelloWorld.html
+++ b/01-React/03-React/HelloWorld.html
@@ -10,9 +10,16 @@
 <body>
   <div id="app"></div>
   <script type="text/babel">
+    // ReactDOM.render(
+    //   <h1>Hello World</h1>,
+    //   document.querySelector('#app')
+    // )
+
+    const name = 'John Perez';
+    const element = <h1>Hello, {name}</h1>;
     ReactDOM.render(
-      <h1>Hello World</h1>,
-      document.querySelector('#app')
+      element,
+      document.getElementById('app')
     )
   </script>
 </body>
