--- a/01-React/03-React/HelloWorld.html
+++ b/01-React/03-React/HelloWorld.html
@@ -15,8 +15,28 @@
     //   document.querySelector('#app')
     // )
 
-    const name = 'John Perez';
-    const element = <h1>Hello, {name}</h1>;
+    // const name = 'John Perez';
+    // const element = <h1>Hello, {name}</h1>;
+    // ReactDOM.render(
+    //   element,
+    //   document.getElementById('app')
+    // )
+
+    function formtname(user) {
+      return user.firstName + ' ' + user.lastName;
+    }
+
+    const user = {
+      firstName: 'Harper',
+      lastName: 'Perez'
+    };
+
+    const element = (
+      <h1>
+        Hello, {formtname(user)}!
+      </h1>
+    );
+
     ReactDOM.render(
       element,
       document.getElementById('app')
