--- a/01-React/04-React/HelloReact.html
+++ b/01-React/04-React/HelloReact.html
@@ -10,11 +10,28 @@
 <body>
   <div id="app"></div>
   <script type="text/babel">
+    function Avatar(props) {
+      return (
+        <img className="Avatar" src={props.user.avatarUrl} alt={props.user.name} />
+      )
+    }
+
+    function UserInfo(props) {
+      return (
+        <div className="UserInfo">
+          <Avatar user={props.user} />
+          <div className="UserInfo-name">
+            {props.user.name}
+          </div>
+        </div>
+      )
+    }
+
     function Comment(props) {
       return (
         <div className="Comment">
           <div className="UserInfo">
-            <img className="Avatar" src={props.author.avatarUrl} alt={props.author.name} />
+            <Avatar user={props.author} />
             <div className="UserInfo-name">{props.author.name}</div>
           </div>
           <div className="Comment-text">
