--- a/01-React/04-React/HelloReact.html
+++ b/01-React/04-React/HelloReact.html
@@ -30,10 +30,7 @@
     function Comment(props) {
       return (
         <div className="Comment">
-          <div className="UserInfo">
-            <Avatar user={props.author} />
-            <div className="UserInfo-name">{props.author.name}</div>
-          </div>
+          <UserInfo user={props.author}>
           <div className="Comment-text">
             {props.text}
           </div>
