--- a/01-React/04-React/HelloReact.html
+++ b/01-React/04-React/HelloReact.html
@@ -30,7 +30,7 @@
     function Comment(props) {
       return (
         <div className="Comment">
-          <UserInfo user={props.author}>
+          <UserInfo user={props.author} />
           <div className="Comment-text">
             {props.text}
           </div>
