--- a/01-React/05-React/HelloReact.html
+++ b/01-React/05-React/HelloReact.html
@@ -10,16 +10,33 @@
 <body>
   <div id="app"></div>
   <script type="text/babel">
-    function tick() {
-      const element = (
-        <div>
-          <h1>Hello, world!</h1>
-          <h2>It is {new Date().toLocaleTimeString()}.</h2>
+    // function tick() {
+    //   const element = (
+    //     <div>
+    //       <h1>Hello, world!</h1>
+    //       <h2>It is {new Date().toLocaleTimeString()}.</h2>
+    //     </div>
+    //   )
+    //
+    //   ReactDOM.render(
+    //     element,
+    //     document.getElementById('app')
+    //   )
+    // }
+
+    function Clock(props) {
+      return (
+              <div>
+          <h1>Hello, World!</h1>
+          <h2>It is {props.date.toLocaleTimeString()}.</h2>
         </div>
-      )
+      );
+    }
+
+    function tick() {
 
       ReactDOM.render(
-        element,
+        <Clock date={new Date()} />,
         document.getElementById('app')
       )
     }
