--- a/01-React/05-React/HelloReact.html
+++ b/01-React/05-React/HelloReact.html
@@ -23,25 +23,61 @@
     //     document.getElementById('app')
     //   )
     // }
+    // setInterval(tick, 1000)
 
-    function Clock(props) {
-      return (
-              <div>
-          <h1>Hello, World!</h1>
-          <h2>It is {props.date.toLocaleTimeString()}.</h2>
-        </div>
-      );
+    // function Clock(props) {
+    //   return (
+    //           <div>
+    //       <h1>Hello, World!</h1>
+    //       <h2>It is {props.date.toLocaleTimeString()}.</h2>
+    //     </div>
+    //   );
+    // }
+    //
+    // function tick() {
+    //
+    //   ReactDOM.render(
+    //     <Clock date={new Date()} />,
+    //     document.getElementById('app')
+    //   )
+    // }
+    //
+    // setInterval(tick, 1000)
+
+    class Clock extends React.Component {
+      constructor(props) {
+        super(props);
+        this.state = {date: new Date()};
+      }
+
+      componentDidMount() {
+        this.timeID = setInterval(() => this.tick(), 1000);
+      }
+
+      componentWillUnmount() {
+        clearInterval(this.timeID);
+      }
+
+      tick() {
+        this.setState({
+          date: new Date()
+        })
+      }
+
+      render() {
+        return (
+          <div>
+            <h1>Hello, World!</h1>
+            <h2>It is {this.state.date.toLocaleTimeString()}.</h2>
+          </div>
+        );
+      }
     }
 
-    function tick() {
-
-      ReactDOM.render(
-        <Clock date={new Date()} />,
-        document.getElementById('app')
-      )
-    }
-
-    setInterval(tick, 1000)
+    ReactDOM.render(
+      <Clock />,
+      document.getElementById('app')
+    )
   </script>
 </body>
 </html>
