--- a/01-React/08-React/HelloReact.html
+++ b/01-React/08-React/HelloReact.html
@@ -23,6 +23,7 @@
     }
 
     const messages = ['React', 'Re: React', 'Re:Re: React'];
+    // const messages = [];
     ReactDOM.render(
       <Mailbox unreadMessages={messages} />,
       document.getElementById('app')
