--- a/01-React/10-React/HelloReact.html
+++ b/01-React/10-React/HelloReact.html
@@ -10,21 +10,45 @@
 <body>
   <div id="app"></div>
   <script type="text/babel">
-    function NumberList(props) {
-      const numbers = props.numbers;
-      const listItems = numbers.map((number) =>
-        <li key={number.toString()}>{number}</li>
-      );
-      return (
-        <ul>{listItems}</ul>
-      );
-    }
+    // function NumberList(props) {
+    //   const numbers = props.numbers;
+    //   const listItems = numbers.map((number) =>
+    //     <li key={number.toString()}>{number}</li>
+    //   );
+    //   return (
+    //     <ul>{listItems}</ul>
+    //   );
+    // }
+    //
+    // const numbers = [1, 2, 3, 4, 5];
+    // ReactDOM.render(
+    //   <NumberList numbers={numbers} />,
+    //   document.getElementById('app')
+    // );
 
-    const numbers = [1, 2, 3, 4, 5];
-    ReactDOM.render(
-      <NumberList numbers={numbers} />,
-      document.getElementById('app')
-    );
+      function ListItem(props) {
+        // 正确！这里不需要指定 key：
+        return <li>{props.value}</li>;
+      }
+
+      function NumberList(props) {
+        const numbers = props.numbers;
+        const listItems = numbers.map((number) =>
+          // 正确！key 应该在数组的上下文中被指定
+          <ListItem key={number.toString()} value={number} />
+        );
+        return (
+          <ul>
+            {listItems}
+          </ul>
+        );
+      }
+
+      const numbers = [1, 2, 3, 4, 5];
+      ReactDOM.render(
+        <NumberList numbers={numbers} />,
+        document.getElementById('app')
+      );
   </script>
 </body>
 </html>
