--- a/01-React/15-React/HelloReact.html
+++ b/01-React/15-React/HelloReact.html
@@ -10,14 +10,42 @@
 <body>
   <div id="app"></div>
   <script type="text/babel">
-    function BoilingVerdict(props) {
-      if (props.celsius >= 100) {
-        return <p>The water would boil.</p>;
-      }
-      return <p>The water would not boil.</p>;
-    }
+    // function BoilingVerdict(props) {
+    //   if (props.celsius >= 100) {
+    //     return <p>The water would boil.</p>;
+    //   }
+    //   return <p>The water would not boil.</p>;
+    // }
+    //
+    // class Calculator extends React.Component {
+    //   constructor(props) {
+    //     super(props);
+    //     this.handleChange = this.handleChange.bind(this);
+    //     this.state = {temperature: ''};
+    //   }
+    //
+    //   handleChange(e) {
+    //     this.setState({temperature: e.target.value});
+    //   }
+    //
+    //   render() {
+    //     const temperature = this.state.temperature;
+    //     return (
+    //       <fieldset>
+    //         <legend>Enter temperature in Celsius:</legend>
+    //         <input value={temperature} onChange={this.handleChange} />
+    //         <BoilingVerdict celsius={parseFloat(temperature)} />
+    //       </fieldset>
+    //     );
+    //   }
+    // }
 
-    class Calculator extends React.Component {
+    const scaleNames = {
+      c: 'Celsius',
+      f: 'Fahrenheit'
+    };
+
+    class TemperatureInput extends React.Component {
       constructor(props) {
         super(props);
         this.handleChange = this.handleChange.bind(this);
@@ -30,12 +58,23 @@
 
       render() {
         const temperature = this.state.temperature;
+        const scale = this.props.scale;
         return (
           <fieldset>
-            <legend>Enter temperature in Celsius:</legend>
+            <legend>Enter temperature in {scaleNames[scale]}:</legend>
             <input value={temperature} onChange={this.handleChange} />
-            <BoilingVerdict celsius={parseFloat(temperature)} />
           </fieldset>
+        );
+      }
+    }
+
+    class Calculator extends React.Component {
+      render() {
+        return (
+          <div>
+            <TemperatureInput scale="c" />
+            <TemperatureInput scale="f" />
+          </div>
         );
       }
     }
