--- a/01-React/16-React/HelloReact.html
+++ b/01-React/16-React/HelloReact.html
@@ -10,7 +10,31 @@
 <body>
   <div id="app"></div>
   <script type="text/babel">
-    
+    function FancyBorder(props) {
+      return (
+        <div className={'FancyBorder FancyBorder-' + props.color}>
+          {props.children}
+        </div>
+      )
+    }
+
+    function WelcomeDialog() {
+      return (
+        <FancyBorder color="blue">
+          <h1 className="Dialog-title">
+            Welcome
+          </h1>
+          <p className="Dialog-message">
+            Thank you for visiting our spacecraft!
+          </p>
+        </FancyBorder>
+      )
+    }
+
+    ReactDOM.render(
+      <WelcomeDialog />,
+      document.getElementById('app')
+    );
   </script>
 </body>
 </html>
