--- a/01-React/16-React/HelloReact.html
+++ b/01-React/16-React/HelloReact.html
@@ -6,6 +6,25 @@
   <script src="../../reactjs/react.development.js"></script>
   <script src="../../reactjs/react-dom.development.js"></script>
   <script src="../../reactjs/babel.min.js"></script>
+  <style>
+    .FancyBorder {
+      padding: 10px 10px;
+      border: 10px solid;
+    }
+
+    .FancyBorder-blue {
+      border-color: blue;
+    }
+
+    .Dialog-title {
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    .Dialog-message {
+      font-size: larger;
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
