--- a/01-React/18-React/HelloReact.html
+++ b/01-React/18-React/HelloReact.html
@@ -6,8 +6,63 @@
   <script src="../../reactjs/react.development.js"></script>
   <script src="../../reactjs/react-dom.development.js"></script>
   <script src="../../reactjs/babel.min.js"></script>
+  <style>
+    .FancyBorder {
+      padding: 10px 10px;
+      border: 10px solid;
+    }
+
+    .FancyBorder-blue {
+      border-color: blue;
+    }
+
+    .Dialog-title {
+      margin: 0;
+      font-family: sans-serif;
+    }
+
+    .Dialog-message {
+      font-size: larger;
+    }
+  </style>
 </head>
 <body>
+  <div id="app"></div>
+  <script type="text/babel">
+    function FancyBorder(props) {
+      return (
+        <div className={'FancyBorder FancyBorder-' + props.color}>
+          {props.children}
+        </div>
+      );
+    }
 
+    function Dialog(props) {
+      return (
+        <FancyBorder color="blue">
+          <h1 className="Dialog-title">
+            {props.title}
+          </h1>
+          <p className="Dialog-message">
+            {props.message}
+          </p>
+        </FancyBorder>
+      );
+    }
+
+    function WelcomeDialog() {
+      return (
+        <Dialog
+          title="Welcome"
+          message="Thank you for visiting our spacecraft!" />
+      );
+    }
+
+    ReactDOM.render(
+      <WelcomeDialog />,
+      document.getElementById('app')
+    );
+
+  </script>
 </body>
 </html>
