--- a/05-ReactHooks/02-EffectHook.html
+++ b/05-ReactHooks/02-EffectHook.html
@@ -12,7 +12,7 @@
     <div id="app"></div>
 
     <script type="text/babel">
-      const { useState, UseEffect } = React;
+      const { useState, useEffect } = React;
 
       function FriendStatus(props) {
         const [isOnline, setIsOnline] = useState(null);
